--- a/frontend/src/components/SnowMan/Snowman.module.scss
+++ b/frontend/src/components/SnowMan/Snowman.module.scss
@@ -1,6 +1,9 @@
+@import '../../scss/varibles';
+
 .snowman {
-  width: 150px;
+  width: calc($size * 6 );
+  // height: 100%;
   position: fixed;
-  bottom: 10px;
+  bottom: 33%;
   left: 10px;
 }
