--- a/frontend/src/components/snow/Snow.module.scss
+++ b/frontend/src/components/snow/Snow.module.scss
@@ -1,7 +1,5 @@
 .snow {
   position: fixed;
-  width: 8vw;
-  height: 8vh;
   z-index: 10000000000000000000000000;
   width: 9vw;
   height: 28vh;
@@ -9,5 +7,17 @@
   top: 47vh;
   left: 7vw;
   z-index: 1000000000;
-  transform:rotate(-110deg);
+  // transform:rotate(-110deg);
+}
+
+@keyframes fly {
+  0% {
+    transform:rotate(0deg);
+  }
+  50% {
+
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
